--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!-- Основной контент -->
         <main class="content">
             <div class="main-banner" style="
-    <img src="Samsung.Webp" style="position: absolute; right: 20px; height: 90%; width: auto; z-index: 1;" alt="Galaxy S22">
+    background: #21352e url(titanium.webp) no-repeat right center;
     background-size: contain;
     height: 400px;
     border-radius: 12px;
